update: book filter api
