# swagger.json
@@ -21,19 +21,93 @@
           }
         },
         "tags": [
-          "Books"
+          "book"
         ]
       },
       "get": {
-        "operationId": "BooksController_findAll",
-        "parameters": [],
+        "operationId": "BooksController_listing_books",
+        "parameters": [
+          {
+            "name": "author",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
+            "name": "title",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "publisher_ids",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "number"
+              }
+            }
+          },
+          {
+            "name": "rating_from",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "rating_to",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "tags",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
+            "name": "page",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "per_page",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
           }
         },
         "tags": [
-          "Books"
+          "book"
         ]
       }
     },
@@ -56,7 +130,7 @@
           }
         },
         "tags": [
-          "Books"
+          "book"
         ]
       },
       "patch": {
@@ -87,7 +161,7 @@
           }
         },
         "tags": [
-          "Books"
+          "book"
         ]
       },
       "delete": {
@@ -108,7 +182,7 @@
           }
         },
         "tags": [
-          "Books"
+          "book"
         ]
       }
     },
@@ -243,7 +317,7 @@
           }
         },
         "tags": [
-          "Users"
+          "User"
         ]
       },
       "get": {
@@ -255,7 +329,7 @@
           }
         },
         "tags": [
-          "Users"
+          "User"
         ]
       }
     },
@@ -278,7 +352,7 @@
           }
         },
         "tags": [
-          "Users"
+          "User"
         ]
       }
     },
@@ -435,6 +509,106 @@
   "servers": [],
   "components": {
     "schemas": {
+      "BookFilterDto": {
+        "type": "object",
+        "properties": {
+          "author": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "title": {
+            "type": "string"
+          },
+          "publisher_ids": {
+            "type": "array",
+            "items": {
+              "type": "number"
+            }
+          },
+          "rating_from": {
+            "type": "number"
+          },
+          "rating_to": {
+            "type": "number"
+          },
+          "tags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "page": {
+            "type": "number"
+          },
+          "per_page": {
+            "type": "number"
+          }
+        }
+      },
+      "BookListItem": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number"
+          },
+          "author": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "isbn": {
+            "type": "string"
+          },
+          "publisherId": {
+            "type": "number"
+          },
+          "price": {
+            "type": "number"
+          },
+          "cover_image_url": {
+            "type": "string"
+          },
+          "rating": {
+            "type": "number"
+          },
+          "number_of_reviews": {
+            "type": "number"
+          },
+          "tags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "author",
+          "title",
+          "isbn",
+          "publisherId",
+          "price",
+          "rating",
+          "number_of_reviews"
+        ]
+      },
+      "BookFilterResponseDto": {
+        "type": "object",
+        "properties": {
+          "total": {
+            "type": "number"
+          },
+          "list": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
       "CreateBookDto": {
         "type": "object",
         "properties": {}
@@ -453,7 +627,26 @@
       },
       "CreateUserDto": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "password_set_token": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "email",
+          "name",
+          "password_set_token"
+        ]
       },
       "UserRole": {
         "type": "string",
@@ -462,6 +655,45 @@
           "USER",
           "ADMIN"
         ]
+      },
+      "UpdateNewUserDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "password_set_token": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "avatar_url": {
+            "type": "string"
+          },
+          "phone_number": {
+            "type": "string"
+          },
+          "role": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/UserRole"
+              }
+            ]
+          }
+        },
+        "required": [
+          "id",
+          "password_set_token",
+          "password",
+          "avatar_url",
+          "phone_number",
+          "role"
+        ]
+      },
+      "UpdateUserDto": {
+        "type": "object",
+        "properties": {}
       },
       "LoginDto": {
         "type": "object",
@@ -488,7 +720,22 @@
       },
       "UserBasicInfor": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "email",
+          "name",
+          "role"
+        ]
       },
       "LoginResponseDto": {
         "type": "object",
@@ -511,11 +758,37 @@
       },
       "SignUpFirstStepDto": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "email",
+          "name"
+        ]
       },
       "SignUpSecondStepDto": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "string"
+          },
+          "password_set_token": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "avatar_url": {
+            "type": "string"
+          },
+          "phone_number": {
+            "type": "string"
+          },
           "role": {
             "allOf": [
               {
@@ -525,6 +798,11 @@
           }
         },
         "required": [
+          "id",
+          "password_set_token",
+          "password",
+          "avatar_url",
+          "phone_number",
           "role"
         ]
       },
